--- a/www/index.html
+++ b/www/index.html
@@ -146,7 +146,7 @@
     <div id="docs-helper" class="helper">
       <a class="external-link" href="https://github.com/jdhenke/uap/wiki/User-Guide">Docs</a>
       <span class="link-separator"> | </span>
-      <a class="external-link" href="https://github.com/jdhenke/celestrium">Code</a>
+      <a class="external-link" href="https://github.com/jdhenke/uap/">Code</a>
     </div>
   </div>
 
