change name to ConceptNet

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Celestrium</title>
+<title>ConceptNet</title>
 <link rel="shortcut icon" href="https://identicons.github.com/jdhenke.png">
 <script data-main="scripts/main" src="scripts/require.js"></script>
 <style>
@@ -83,10 +83,7 @@
   <div id="helper-container-top-left" class="helper-container">
     <div class="helper">
       <div id="title">
-        Celestrium
-      </div>
-      <div id="subtitle">
-        Sharon Hao, Justin Helbert, Joe Henke
+        ConceptNet
       </div>
     </div>
     
