make traversed code links not appear differently

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
   .histogram-header {text-align: center; }
 
   /* links */
-  #bottom-right-container a { text-decoration: none; font-style: italic;}
+  #bottom-right-container a { text-decoration: none; font-style: italic; color: black;}
   #bottom-right-container a:hover {color: white;}
 
 </style>
