create assertion provider

--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,8 @@
   #bottom-right-container {bottom: 5px; right: 5px;}
 
   /* graph workspace */
-  .node circle {fill: steelblue; stroke: steelblue;}
-  .node.selected circle {fill: orange;}
+  .node circle {}
+  .node.selected circle {fill: lime;}
   .node text {opacity: 0.5; }
   .node:hover text {opacity: 1; }
   .link {stroke: gray; opacity: 0.5;}
