add working assertion search

--- a/src/www/index-assertions.html
+++ b/src/www/index-assertions.html
@@ -13,6 +13,12 @@
   <!-- default styling for celestrium workspace -->
   <link rel="stylesheet" type="text/css" href="/scripts/celestrium/css/celestrium-defaults.css">
 
+  <style>
+    /* assertion search */
+    .assertion-search-container input {font-size: 12pt; outline: none; }
+    .assertion-search-container button {font-size: 12pt; vertical-align: bottom;}
+  </style>
+
 </head>
 <body>
 
