mv uap coffee scripts to uap-coffee

--- a/src/www/index-assertions.html
+++ b/src/www/index-assertions.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="https://identicons.github.com/jdhenke.png">
 
   <!-- javascript for page -->
-  <script data-main="scripts/main-assertions" src="scripts/celestrium/lib/require.js"></script>
+  <script data-main="scripts/uap/main-assertions" src="scripts/celestrium/lib/require.js"></script>
 
   <!-- default styling for celestrium workspace -->
   <link rel="stylesheet" type="text/css" href="/scripts/celestrium/css/celestrium-defaults.css">
